salesforce-main/src/main/default/objects/External_Document__c/External_Document__c.object-meta.xml
<CustomObject>
    <label>External Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>