salesforce-main/src/main/default/objects/External_Document__c/fields/Awarding_Institution__c.field-meta.xml
<CustomField>
    <fullName>Awarding_Institution__c</fullName>
    <label>Awarding Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>