salesforce-main/src/main/default/objects/External_Document__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>doc</fullName>
                <label>Document</label>
            </value>
            <value>
                <fullName>excel</fullName>
                <label>Excel</label>
            </value>
            <value>
                <fullName>image</fullName>
                <label>Image</label>
            </value>
            <value>
                <fullName>pdf</fullName>
                <label>PDF</label>
            </value>
            <value>
                <fullName>powerpoint</fullName>
                <label>Powerpoint</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>