salesforce-main/src/main/default/objects/External_Document__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>External Documents</relationshipLabel>
    <relationshipName>External_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>