salesforce-main/src/main/default/objects/External_Document__c/fields/Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_ID__c</fullName>
    <externalId>true</externalId>
    <label>Document ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>