salesforce-main/src/main/default/objects/External_Document__c/fields/External_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Document_Link__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; Id , Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Document Link</label>
    <type>Text</type>
</CustomField>