salesforce-main/src/main/default/objects/External_Document__c/fields/Not_Available__c.field-meta.xml
<CustomField>
    <fullName>Not_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether the document has been flagged as uploaded or not</description>
    <label>Not Available</label>
    <type>Checkbox</type>
</CustomField>