salesforce-main/src/main/default/objects/External_Document__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>External Documents</relationshipLabel>
    <relationshipName>External_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>