salesforce-main/src/main/default/objects/External_Document__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External Documents</relationshipLabel>
    <relationshipName>External_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>