salesforce-main/src/main/default/objects/External_Document__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EDUCATION_HISTORY</fullName>
                <label>Education History</label>
            </value>
            <value>
                <fullName>GENERAL</fullName>
                <label>General</label>
            </value>
            <value>
                <fullName>Name Changed</fullName>
            </value>
            <value>
                <fullName>Application Pack</fullName>
            </value>
            <value>
                <fullName>letter</fullName>
                <label>Letter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>