salesforce-main/src/main/default/objects/External_Document__c/validationRules/Restrict_Name_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Name_Change</fullName>
    <active>true</active>
    <description>Only the System can update External Document names.</description>
    <errorConditionFormula>AND(
  ISCHANGED(Name),
  $Profile.Name != &apos;System Administrator&apos;,
  $UserRole.DeveloperName != &apos;System_API&apos;
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name cannot be updated within Salesforce.</errorMessage>
</ValidationRule>